--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -34,6 +34,6 @@
       </div>
     </div>
     <script src="./scripts/jquery-3.3.1.slim.min.js"></script>
-    <script src="./scripts/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   </body>
 </html>
